<resources>
    <string name="app_name">Hamunaptra</string>
    <string name="p5">Contact us : </string>
    <string name="p6">+917550101606</string>
    <string name="p12">Find On Google Map :</string>
    <string name="p11">Mail ID :</string>
    <string name="p10">Mobile No :</string>
    <string name="p7">gopalravichander1133@gmail.com</string>
    <string name="p8">https://www.google.co.in/maps/place/Loyola+College/@13.0638208,80.2376969,14z/data=!4m5!3m4!1s0x0:0x8ce586fc6de1e142!8m2!3d13.0632899!4d80.2340394</string>
    <string name="p1">A way to unlock Nature </string>
    <string name="p2">About Hamunaptra </string>
    <string name="p3">Hamunaptra is a new startup for formers.It offers lowest price seeds and fertilizers.You can learn about new techniques in planting by This app.</string>
</resources>

